--- a/item_11.html
+++ b/item_11.html
@@ -53,6 +53,7 @@
 							<li><a href="item_10.html">DELTA</a></li>
 							<li><a href="item_11.html">NATURE</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
+							<li><a href="resume.html">Resume</a></li>
 						</ul>
 					</nav>
 
