--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>MJaroszewski | 3D Dining</title>
+		<title>MJaroszewski | Urban Style</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -61,66 +61,21 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>3D Dining | Book a Table</h1>
-							<span class="image main"><img src="images/gif02.gif" alt="" /></span>
-
-							<h3>This is a Python/Flask application powered by SQLAlchemy ORM to provide an efficient table management system.
-                                Its main function is to ensure that maximum capacity per day ( 30 covers ) is not overreached. 
-                                Our fictional business is closed for weekends, therefore reservation allocation algorithm will only allow bookings 
-                                from monday to friday. After visiting endpoint '/admin' user is presented with the option of checking particular 
-                                dates in regard to total number of bookings, email addresses and corresponding table requests.
-							</h3>
-							<br>
-							<section>
+                            <section>
 								<div class="tools">
 									<table class="alt">
 										<tr>
-										  <th class="head">Live</th>
-										  <th class="head">Code</th>
-										  <th class="head">Docker</th>
+										  <th colspan="2" class="head">Download</th>
 										</tr>
 										<tr>
-										  <td><a href="https://dining-3d.herokuapp.com/" target="blank" class="live"><img src="images/heroku.png" alt=""></a></td>
-										  <td><a href="https://github.com/mjaroszewski1979/3d_dining" target="blank" class="live"><img src="images/github.png" alt=""></a></td>
-										  <td><a href="https://hub.docker.com/r/maciej1245/3d_dining" target="blank" class="live"><img src="images/docker.png" alt=""></a></td>
+                                            <td><a href="MJaroszewski_CV_PDF.pdf" download class="live"><img src="images/pdf.png" alt=""></a></td>
+                                            <td><a href="MJaroszewski_CV_PNG.png" download class="live"><img src="images/png.png" alt=""></a></td>
 										</tr>
 									</table>
 								</div>
 							</section>
-							<br>
-                            <h3 id='features'>Structure:</h3>
-                                <ul>
-                                    <li>Header</li>
-                                    <ul>
-                                        <li>Company Logo - Neon Light Button</li>
-                                        <li>Font Awesome Icons</li>
-                                        <li>Animated Tooltips</li>
-                                    </ul>
-                                    <li>Body</li>
-                                    <ul>
-                                        <li>3D Animation Scene with Gradient Floor</li>
-                                        <li>Reservation Form</li>
-                                        <li>Menu Cards Displaying Details on Hover</li>
-                                        <li>Admin Section</li>
-                                        <li>Table with Booking Information</li>
-                                    </ul>
-                                </ul>
-                                <br>
-                                <h3 id='features'>Features:</h3>
-                                <ul>
-                                    <li>Compatible with devices of all sizes </li>
-                                    <li>CSS Flexbox applied to simplify complex layout structure</li>
-                                    <li>HTML and CSS minification process aims to reduce webpage loading speed</li>
-                                    <li>Fully responsive navigation menu with neon light button hover effect</li>
-                                    <li>Embedded Font Awesome icon collection and animated tooltips</li>
-                                    <li>CSS custom variables for fast and forward-looking design</li>
-                                    <li>The implementation of SQLAlchemy Object Relational Mapper to associate Python classes with database tables </li>
-                                    <li>Flashing error messages back to users when something goes wrong</li>
-                                    <li>Initializing WTForms basic class fields and validators as well as custom confirmation procedures applied to incoming data</li>
-                                    <li>Advanced 3D animation techniques with the usage of CSS properties like perspective, gradients and rotate</li>
-                                    <li>Declaring models using one-to-many relationship to take full advantage of linking tables together within the database</li>
-
-                                </ul>
+                            <br>
+                            <img src="MJaroszewski_CV_PNG.png" class='resume' width='1200' alt="">
 						</div>
 					</div>
 
