--- a/item_01.html
+++ b/item_01.html
@@ -62,7 +62,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Urban Style | E-commerce website</h1>
-							<span class="image main"><img src="images/gif01.gif" alt="" /></span>
+							<span class="image main"><img src="images/mockups/urban_mockup.png" alt="" /></span>
 
 							<h3>This is a Django e-commerce website powered by Stripe library to provide convenient access to the Stripe API from applications written in the Python language. 
 								Its main function is to take full advantage of the custom models - users, categories and products, to make it possible for the vendors to add merchandise, create accounts and log in.
