--- a/item_02.html
+++ b/item_02.html
@@ -62,7 +62,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>3D Dining | Book a Table</h1>
-							<span class="image main"><img src="images/gif02.gif" alt="" /></span>
+							<span class="image main"><img src="images/mockups/3d_mockup.png" alt="" /></span>
 
 							<h3>This is a Python/Flask application powered by SQLAlchemy ORM to provide an efficient table management system.
                                 Its main function is to ensure that maximum capacity per day ( 30 covers ) is not overreached. 
