--- a/item_03.html
+++ b/item_03.html
@@ -62,7 +62,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>MJ Trading | Dogs of Dow</h1>
-							<span class="image main"><img src="images/gif03.gif" alt="" /></span>
+							<span class="image main"><img src="images/mockups/dogs_mockup.png" alt="" /></span>
 
 							<h3>This is an application build with one of the fastest Python web frameworks - FastAPI. In fact, its speed is at par with Node.js and Go, 
                                 it also creates plugins easily using dependency injection. The main function is to display current trend direction for 10 best high-yield 
