--- a/item_04.html
+++ b/item_04.html
@@ -62,7 +62,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Geo Api | Python/Django</h1>
-							<span class="image main"><img src="images/gif04.gif" alt="" /></span>
+							<span class="image main"><img src="images/mockups/geo_mockup.png" alt="" /></span>
 
 							<h3>This is a Django Rest Framework API project powered by JSON Web Token authentication mechanism to provide convenient access to the IP geolocation database from applications written in the Python language. 
                                 Its main function is to take full advantage of the custom models and serializers, to make it possible for the users to create, view and delete geolocation records.
