--- a/item_05.html
+++ b/item_05.html
@@ -62,7 +62,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Market Bias | The Big Picture</h1>
-							<span class="image main"><img src="images/gif05.gif" alt="" /></span>
+							<span class="image main"><img src="images/mockups/market_bias_mockup.png" alt="" /></span>
 
 							<h3>This is a Python/Flask application powered by Pandas and Plotly. 
                                 It is designed to download historical data of S&P 500 from Yahoo Finance API using Pandas Datareader and applies Technical Analysis Library tools.
