--- a/item_06.html
+++ b/item_06.html
@@ -62,7 +62,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Trend Follower | 12-Month Momentum Formula</h1>
-							<span class="image main"><img src="images/gif06.gif" alt="" /></span>
+							<span class="image main"><img src="images/mockups/trend_mockup.png" alt="" /></span>
 
 							<h3>This is a Python application powered by Flask-Login to provide user session management. Its main function is to present current direction for selected financial markets.
                             </h3>
