--- a/item_07.html
+++ b/item_07.html
@@ -62,7 +62,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Google Scraper | Python/Django</h1>
-							<span class="image main"><img src="images/gif07.gif" alt="" /></span>
+							<span class="image main"><img src="images/mockups/scraper_mockup.png" alt="" /></span>
 
 							<h3>This is a Python/Django application powered by requests-HTML library to provide an efficient way to parsing HTML documents using CSS Selectors. 
                                 Its main function is to query Google.com using the following set of queries: web address {keyword}.
