--- a/item_08.html
+++ b/item_08.html
@@ -62,7 +62,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Millionaires Club | CPI by Econdb</h1>
-							<span class="image main"><img src="images/gif08.gif" alt="" /></span>
+							<span class="image main"><img src="images/mockups/mclub_mockup.png" alt="" /></span>
 
 							<h3>This is a Python application powered by FastAPI - high-performance web framework - to reduce about 40% of human (developer) induced errors. 
                                 Its main function is to display current CPI readings for all countries included in Econdb's macroeconomic database.
