--- a/item_09.html
+++ b/item_09.html
@@ -62,7 +62,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>John Smith | Portfolio Website</h1>
-							<span class="image main"><img src="images/gif09.gif" alt="" /></span>
+							<span class="image main"><img src="images/john_top.png" alt="" /></span>
 
 							<h3>This is a Flask application powered by Python's Smtplib built-in module for sending emails. 
                                 It is compatible with devices of all sizes and provides with main functions you would expect from a portfolio type website.
