--- a/item_10.html
+++ b/item_10.html
@@ -62,7 +62,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>DELTA | Real Estate</h1>
-							<span class="image main"><img src="images/gif10.gif" alt="" /></span>
+							<span class="image main"><img src="images/mockups/delta_mockup.png" alt="" /></span>
 
 							<h3>This is a static website powered by HTML, CSS and Slick - jQuery plugin for creating fully customizable, 
                                 responsive and mobile friendly carousels/sliders.
