--- a/item_11.html
+++ b/item_11.html
@@ -61,7 +61,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>NATURE | Food & Drinks</h1>
-							<span class="image main"><img src="images/gif11.gif" alt="" /></span>
+							<span class="image main"><img src="images/mockups/nature_mockup.png" alt="" /></span>
 
 							<h3>This is a static website powered by HTML, CSS and Slick - jQuery plugin for creating fully customizable, 
                                 responsive and mobile friendly carousels/sliders.
