--- a/item_12.html
+++ b/item_12.html
@@ -62,7 +62,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Stooq API | Trend Filter</h1>
-							<span class="image main"><img src="images/gif12.gif" alt="" /></span>
+							<span class="image main"><img src="images/mockups/stooq_mockup.png" alt="" /></span>
 
 							<h3>This is an application build with one of the fastest Python web frameworks - FastAPI. 
                                 The main function is to display current trend direction for all financial instruments included in Stooq's database.
