--- a/item_01.html
+++ b/item_01.html
@@ -44,13 +44,13 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="item_01.html">Urban Style</a></li>
 							<li><a href="item_02.html">3D Dining</a></li>
-							<li><a href="item_03.html">MJ Trading</a></li>
+							<li><a href="item_03.html">Rides Shop</a></li>
 							<li><a href="item_04.html">Geo Api</a></li>
 							<li><a href="item_05.html">Market Bias</a></li>
 							<li><a href="item_06.html">Trend Follower</a></li>
 							<li><a href="item_07.html">Google Scraper</a></li>
 							<li><a href="item_08.html">Millionaires Club</a></li>
-							<li><a href="item_09.html">John Smith</a></li>
+							<li><a href="item_09.html">Dogs of Dow</a></li>
 							<li><a href="item_10.html">DELTA</a></li>
 							<li><a href="item_11.html">NATURE</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
