--- a/item_09.html
+++ b/item_09.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>MJaroszewski | John Smith</title>
+		<title>MJaroszewski | MJ Trading</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,17 +40,17 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<h2>Menu</h2>
-                        <ul>
+						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="item_01.html">Urban Style</a></li>
 							<li><a href="item_02.html">3D Dining</a></li>
-							<li><a href="item_03.html">MJ Trading</a></li>
+							<li><a href="item_03.html">Rides Shop</a></li>
 							<li><a href="item_04.html">Geo Api</a></li>
 							<li><a href="item_05.html">Market Bias</a></li>
 							<li><a href="item_06.html">Trend Follower</a></li>
 							<li><a href="item_07.html">Google Scraper</a></li>
 							<li><a href="item_08.html">Millionaires Club</a></li>
-							<li><a href="item_09.html">John Smith</a></li>
+							<li><a href="item_09.html">Dogs of Dow</a></li>
 							<li><a href="item_10.html">DELTA</a></li>
 							<li><a href="item_11.html">NATURE</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
@@ -61,12 +61,20 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>John Smith | Portfolio Website</h1>
-							<span class="image main"><img src="images/john_top.png" alt="" /></span>
+							<h1>MJ Trading | Dogs of Dow</h1>
+							<span class="image main"><img src="images/mockups/dogs_mockup.png" alt="" /></span>
 
-							<h3>This is a Flask application powered by Python's Smtplib built-in module for sending emails. 
-                                It is compatible with devices of all sizes and provides with main functions you would expect from a portfolio type website.
-                            </h3>
+							<h3>This is an application build with one of the fastest Python web frameworks - FastAPI. In fact, its speed is at par with Node.js and Go, 
+                                it also creates plugins easily using dependency injection. The main function is to display current trend direction for 10 best high-yield 
+                                dividend members of the Dow Jones Industrial Index included in Yahoo Finance's database. After receiving user input, application is 
+                                gaining access to particular stock historical data by utilizing pandas-datareader. 
+							</h3>
+                            <p>
+                                A sizable part of any API project concerns the routine 
+                                stuff like data validation and conversion. In FastAPI-speak, our path operation functions (request handlers) would depend on get_current_user 
+                                and we will leverage the "basic" HTTP authentication scheme. For password hashing, we can use Werkzeug Security to define functions that 
+                                handle password hashing and checking if a password is correct.
+                            </p>
 							<br>
 							<section>
 								<div class="tools">
@@ -77,9 +85,9 @@
 										  <th class="head">Docker</th>
 										</tr>
 										<tr>
-										  <td><a href="https://flask-smtplib.herokuapp.com/" target="blank" class="live"><img src="images/heroku.png" alt=""></a></td>
-										  <td><a href="https://github.com/mjaroszewski1979/flask_udemy" target="blank" class="live"><img src="images/github.png" alt=""></a></td>
-										  <td><a href="https://hub.docker.com/r/maciej1245/john_smith" target="blank" class="live"><img src="images/docker.png" alt=""></a></td>
+										  <td><a href="https://dogs-of-dow.herokuapp.com/" target="blank" class="live"><img src="images/heroku.png" alt=""></a></td>
+										  <td><a href="https://github.com/mjaroszewski1979/dogs_of_dow_v1" target="blank" class="live"><img src="images/github.png" alt=""></a></td>
+										  <td><a href="https://hub.docker.com/r/maciej1245/dogs_of_dow" target="blank" class="live"><img src="images/docker.png" alt=""></a></td>
 										</tr>
 									</table>
 								</div>
@@ -87,14 +95,14 @@
 							<br>
                             <h3 id='features'>Features:</h3>
                             <ul>
-                                <li>Fully responsive navigation menu </li>
-                                <li>CSS custom properties for fast and forward-looking design </li>
-                                <li>Bootstrap style utility classes </li>
-                                <li>Embedded Font Awesome icon collection </li>
+                                <li>CSS Flexbox applied to simplify complex layout patterns </li>
+                                <li>Fully responsive web design</li>
+                                <li>Embedded Font Awesome icon </li>
                                 <li>Advanced HTML and CSS minification process aims to reduce webpage loading speed </li>
-                                <li>CSS Flexbox applied to simplify complex layout design </li>
+                                <li>CSS custom properties for fast and forward-looking design </li>
+                                <li>Moving the fetching data function to a background thread to avoid unnecessary delays during request handling </li>
+                                <li>Implementing Jinja2 extensible templating engine for automatic HTML escaping to prevent cross-site scripting (XSS) attacks </li>
                             </ul>
-                            <br>
 						</div>
 					</div>
 
