--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="item_01.html">Urban Style</a></li>
 							<li><a href="item_02.html">3D Dining</a></li>
-							<li><a href="item_03.html">MJ Trading</a></li>
+							<li><a href="item_03.html">Rides Shop</a></li>
 							<li><a href="item_04.html">Geo Api</a></li>
 							<li><a href="item_05.html">Market Bias</a></li>
 							<li><a href="item_06.html">Trend Follower</a></li>
 							<li><a href="item_07.html">Google Scraper</a></li>
 							<li><a href="item_08.html">Millionaires Club</a></li>
-							<li><a href="item_09.html">John Smith</a></li>
+							<li><a href="item_09.html">Dogs of Dow</a></li>
 							<li><a href="item_10.html">DELTA</a></li>
 							<li><a href="item_11.html">NATURE</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
@@ -95,9 +95,9 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="item_03.html">
-										<h2>MJ Trading</h2>
+										<h2>Rides Shop</h2>
 										<div class="content">
-											<p>This is an application build with one of the fastest Python web frameworks - FastAPI.</p>
+											<p>This is a Python application powered by Django and its Object-Relational Mapper to provide convenient access to stored data. </p>
 										</div>
 									</a>
 								</article>
@@ -161,9 +161,9 @@
 										<img src="images/pic09.jpg" alt="" />
 									</span>
 									<a href="item_09.html">
-										<h2>John Smith</h2>
+										<h2>Dogs of Dow</h2>
 										<div class="content">
-											<p>Flask portfolio website powered by Python's Smtplib module for sending emails.</p>
+											<p>This is an application build with one of the fastest Python web frameworks - FastAPI.</p>
 										</div>
 									</a>
 								</article>
